--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-medium-image-zoom": "^3.0.15",
     "rehype-react": "^3.1.0",
     "styled-components": "^4.1.3",
-    "styled-normalize": "^8.0.6"
+    "styled-normalize": "^8.0.6",
+    "typeface-roboto-mono": "0.0.75",
+    "typeface-rubik": "0.0.72"
   },
   "devDependencies": {
     "gatsby-cli": "^2.4.9",
