--- a/package.json
+++ b/package.json
@@ -10,44 +10,44 @@
     "deploy": "gatsby build && netlify deploy"
   },
   "dependencies": {
-    "@loadable/component": "^5.7.0",
+    "@loadable/component": "^5.12.0",
     "@mdx-js/mdx": "^0.20.3",
     "@mdx-js/tag": "^0.18.0",
-    "ajv": "^6.8.1",
-    "babel-plugin-styled-components": "^1.10.0",
-    "gatsby": "^2.18.17",
-    "gatsby-mdx": "^0.4.0",
-    "gatsby-plugin-google-analytics": "^2.0.13",
-    "gatsby-plugin-nprogress": "^2.0.8",
-    "gatsby-plugin-react-helmet": "^3.0.6",
-    "gatsby-plugin-sharp": "^2.3.10",
-    "gatsby-plugin-styled-components": "^3.0.5",
-    "gatsby-plugin-twitter": "^2.0.9",
-    "gatsby-remark-autolink-headers": "^2.0.14",
+    "ajv": "^6.12.2",
+    "babel-plugin-styled-components": "^1.10.7",
+    "gatsby": "^2.21.15",
+    "gatsby-plugin-google-analytics": "^2.3.1",
+    "gatsby-plugin-mdx": "^1.2.6",
+    "gatsby-plugin-nprogress": "^2.3.1",
+    "gatsby-plugin-react-helmet": "^3.3.1",
+    "gatsby-plugin-sharp": "^2.6.1",
+    "gatsby-plugin-styled-components": "^3.3.1",
+    "gatsby-plugin-twitter": "^2.3.1",
+    "gatsby-remark-autolink-headers": "^2.3.1",
     "gatsby-remark-component": "^1.1.3",
-    "gatsby-remark-copy-linked-files": "^2.0.9",
-    "gatsby-remark-images": "^3.0.3",
-    "gatsby-remark-prismjs": "^3.2.4",
-    "gatsby-remark-smartypants": "^2.0.8",
-    "gatsby-source-filesystem": "^2.1.43",
-    "gatsby-transformer-remark": "^2.2.4",
-    "gatsby-transformer-sharp": "^2.3.9",
-    "prismjs": "^1.15.0",
-    "react": "^16.12.0",
+    "gatsby-remark-copy-linked-files": "^2.3.2",
+    "gatsby-remark-images": "^3.3.1",
+    "gatsby-remark-prismjs": "^3.5.1",
+    "gatsby-remark-smartypants": "^2.3.1",
+    "gatsby-source-filesystem": "^2.3.1",
+    "gatsby-transformer-remark": "^2.8.7",
+    "gatsby-transformer-sharp": "^2.5.1",
+    "prismjs": "^1.20.0",
+    "react": "^16.13.1",
     "react-dimensions": "^1.3.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.0.6",
     "react-medium-image-zoom": "^3.0.15",
     "rehype-react": "^3.1.0",
     "styled-components": "^4.1.3",
-    "styled-normalize": "^8.0.6",
+    "styled-normalize": "^8.0.7",
     "typeface-fira-code": "^1.1.4",
     "typeface-roboto-mono": "0.0.75",
     "typeface-rubik": "0.0.72"
   },
   "devDependencies": {
-    "gatsby-cli": "^2.4.9",
+    "gatsby-cli": "^2.12.11",
     "netlify": "^1.2.0",
     "prettier": "^1.16.4"
   }
