--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@loadable/component": "^5.12.0",
     "@mdx-js/mdx": "^1.6.1",
     "@mdx-js/react": "^1.6.1",
+    "@weknow/gatsby-remark-twitter": "^0.2.3",
     "ajv": "^6.12.2",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.21.15",
@@ -22,7 +23,7 @@
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sharp": "^2.6.1",
     "gatsby-plugin-styled-components": "^3.3.1",
-    "gatsby-plugin-twitter": "^2.3.1",
+    "gatsby-plugin-twitter": "^2.3.5",
     "gatsby-remark-autolink-headers": "^2.3.1",
     "gatsby-remark-component": "^1.1.3",
     "gatsby-remark-copy-linked-files": "^2.3.2",
